# trader-v2

./: .env.example  .gitignore  00 - Trading Agent Spec.md  BUILD-BRIEF.md  CLAUDE.md  CONTEXT-DIGEST-SPEC.md  README.md  RESEARCHER-SPEC.md  SESSION-HANDOFF.md  SETUP-WINDOWS.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.streamlit/: config.toml
agent/: __init__.py  config.py  decay.py  execution.py  governor.py  kite_auth.py  kite_session.py  live_strategies.py  logging_setup.py  loop.py  notify.py  reconcile.py  registry.py  retry.py  reviews.py  risk.py  state.py  strategy.py  strategy_compiler.py  strategy_spec.py  trading_day.py  universe.py
backtest/: __init__.py  costs.py  engine.py  optimize.py  research.py  validation.py
config/: config.yaml
dashboard/: README.md  __init__.py  app.py  publisher.py  requirements.txt  schema.sql  seed_demo.py  store.py
data/: holidays_2026.py
prompts/: research_desk_system.md
scripts/: auto_login.py  backfill_dashboard.py  deploy_s001.py  kite_login.py  notify_login.py  research_backtest.py  researcher.py  run_loop.py  select_universe.py  study_stock.py  verify_phase1.py
tests/: conftest.py  test_backtest_engine.py  test_backtest_integration.py  test_costs.py  test_dashboard.py  test_digest.py  test_digest_budget.py  test_digest_drift.py  test_digest_fidelity.py  test_execution.py  test_governor.py  test_indicators.py  test_kite_auth.py  test_kite_client_readonly.py  test_kite_login.py  test_kite_session.py  test_live_strategies.py  test_loop.py  test_notify.py  test_optimize.py  (+19 more)
(+17 files in other folders)
